--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -5,4 +5,5 @@ MAINTAINER Mitch Anderson <@undeadops>
 RUN apk add --update \
     openjdk8-jre
     wget \
+    supervisor \
   && rm -rf /var/cache/apk/*
