--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,14 +1,31 @@
-FROM undeadops/alpine-base:3.3
+FROM alpine:3.4
 
 MAINTAINER Mitch Anderson <@undeadops>
 
-RUN apk add --update \
-    python \
-    python-dev \
-    py-pip \
-    build-base \
-    wget \
-    supervisor \
-  && rm -rf /var/cache/apk/*
+# Adds testing package to repositories
+# Install needed packages. Notes:
+#   * build-base: used so we include the basic development packages (gcc)
+#   * python-dev: are used for gevent e.g.
+#   * bash: so we can access /bin/bash
+RUN echo "@testing http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
+  && apk add --update \
+              musl \
+              build-base \
+              bash \
+              git \
+              python \
+              python-dev \
+              py-pip \
+  && pip install --upgrade pip \
+  && rm /var/cache/apk/*
 
-RUN mkdir /source
+# make some useful symlinks that are expected to exist
+RUN cd /usr/bin \
+  && ln -sf easy_install-2.7 easy_install \
+  && ln -sf python2.7 python \
+  && ln -sf python2.7-config python-config \
+  && ln -sf pip2.7 pip
+
+# since we will be "always" mounting the volume, we can set this up
+CMD python
+
